Panel fix for iOS devices, little hack for smooth scroll on iOS

--- a/scss/furatto/_base.scss
+++ b/scss/furatto/_base.scss
@@ -27,7 +27,6 @@ a {
 html, body {
   background-color: $bg-color;
   height: 100%;
-  overflow-x:hidden;
 }
 
 .with-left-navbar {
